--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -5,8 +5,6 @@
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
-        android:label="@string/app_name"
-        android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
         <activity android:name=".MainActivity">
@@ -17,6 +15,7 @@
             </intent-filter>
         </activity>
         <activity android:name=".scalegradual.ScaleAndGradual"/>
+        <activity android:name=".heart.HeartFlowActivity"/>
     </application>
 
 </manifest>
